--- a/JessicaData/src/main/resources/application.properties
+++ b/JessicaData/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.main.banner-mode=off
+
+# MYSQL settings
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/flowerbox
+spring.datasource.username=root
+spring.datasource.password=admin
+
+# HikariCP settings
+# spring.datasource.hikari.*
+
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=5
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.=error
 
