--- a/JessicaMicroCustomer/src/main/resources/application.properties
+++ b/JessicaMicroCustomer/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-
-spring.application.name=JessicaMicroLogin
+spring.application.name=JessicaMicroCustomer
 spring.profiles.active=test
 spring.cloud.config.uri=http://localhost:8888
 eureka.client.serviceUrl.defaultZone=http://localhost:9091/eureka
-server.port=9082
+server.port=9081
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
