--- a/jessicamicrocarrito/src/main/resources/application.properties
+++ b/jessicamicrocarrito/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-
-spring.application.name=JessicaMicroLogin
+spring.application.name=JessicaMicroCarrito
 spring.profiles.active=test
 spring.cloud.config.uri=http://localhost:8888
 eureka.client.serviceUrl.defaultZone=http://localhost:9091/eureka
-server.port=9082
+server.port=9080
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
@@ -26,4 +25,3 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.=error
-
