--- a/JessicaMicroLogin/src/main/resources/application.properties
+++ b/JessicaMicroLogin/src/main/resources/application.properties
@@ -10,7 +10,7 @@ eureka.client.fetch-registry=true
 spring.main.banner-mode=off
 
 # MYSQL settings
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/flowerbox
 spring.datasource.username=root
 spring.datasource.password=admin
