--- a/JessicaMicroSearch/src/main/resources/application.properties
+++ b/JessicaMicroSearch/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 
+spring.application.name=JessicaMicroSearch
+spring.profiles.active=test
+spring.cloud.config.uri=http://localhost:8888
+eureka.client.serviceUrl.defaultZone=http://localhost:9091/eureka
+server.port=9084
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+spring.main.banner-mode=off
+
+# MYSQL settings
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/flowerbox
+spring.datasource.username=root
+spring.datasource.password=admin
+
+# HikariCP settings
+# spring.datasource.hikari.*
+
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=5
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.=error
+
+
